--- a/Areas/Admin/Views/RoomInfoes/Delete.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Delete.cshtml
@@ -72,6 +72,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayName("Được duyệt")
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.isApproved)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.meta)
         </dt>
 
