--- a/Areas/Admin/Views/RoomInfoes/getRoom.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/getRoom.cshtml
@@ -1,5 +1,4 @@
-﻿@using HoiTroWebsite.Help
-@model IEnumerable<HoiTroWebsite.Models.RoomInfo>
+﻿@model IEnumerable<HoiTroWebsite.Models.RoomInfo>
 <div id="dataTables-example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
     <div class="row">
         <div class="col-sm-2">
