--- a/Areas/Admin/Views/SubMenus/Details.cshtml
+++ b/Areas/Admin/Views/SubMenus/Details.cshtml
@@ -7,7 +7,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.name)
+            @Html.DisplayName("Tên")
         </dt>
 
         <dd>
@@ -15,7 +15,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.link)
+            @Html.DisplayName("Liên kết")
         </dt>
 
         <dd>
@@ -31,7 +31,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.hide)
+            @Html.DisplayName("Hiển thị")
         </dt>
 
         <dd>
@@ -39,7 +39,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.order)
+            @Html.DisplayName("Sắp xếp")
         </dt>
 
         <dd>
@@ -47,7 +47,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.datebegin)
+            @Html.DisplayName("Ngày tạo")
         </dt>
 
         <dd>
@@ -55,7 +55,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Menu.name)
+            @Html.DisplayName("Menu cha")
         </dt>
 
         <dd>
