--- a/Areas/Admin/Views/RoomInfoes/Delete.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Delete.cshtml
@@ -4,7 +4,7 @@
 
 <h3>Bạn có chắn muốn xóa không?</h3>
 <div>
-    <h4>RoomInfo</h4>
+    <h4>Bài đăng cho thuê</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
