--- a/Areas/Admin/Views/SubMenus/Create.cshtml
+++ b/Areas/Admin/Views/SubMenus/Create.cshtml
@@ -12,7 +12,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label " })
+            @Html.Label("Tên", htmlAttributes: new { @class = "control-label " })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -20,7 +20,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.link, htmlAttributes: new { @class = "control-label " })
+            @Html.Label("Liên kết", htmlAttributes: new { @class = "control-label " })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.link, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.link, "", new { @class = "text-danger" })
@@ -36,7 +36,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.hide, htmlAttributes: new { @class = "control-label " })
+            @Html.Label("Hiển thị", htmlAttributes: new { @class = "control-label " })
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.hide)
@@ -46,7 +46,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.order, htmlAttributes: new { @class = "control-label " })
+            @Html.Label("Sắp xếp", htmlAttributes: new { @class = "control-label " })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.order, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.order, "", new { @class = "text-danger" })
@@ -54,17 +54,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.datebegin, htmlAttributes: new { @class = "control-label " })
+            @Html.Label("Menu cha", htmlAttributes: new { @class = "control-label " })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.datebegin, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.datebegin, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.menuId, "menuId", htmlAttributes: new { @class = "control-label " })
-            <div class="col-md-10">
-                @Html.DropDownList("menuId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("Menu cha", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.menuId, "", new { @class = "text-danger" })
             </div>
         </div>
