--- a/Areas/Admin/Views/SubMenus/Delete.cshtml
+++ b/Areas/Admin/Views/SubMenus/Delete.cshtml
@@ -8,7 +8,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.name)
+            @Html.DisplayName("Tên")
         </dt>
 
         <dd>
@@ -16,7 +16,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.link)
+            @Html.DisplayName("Liên kết")
         </dt>
 
         <dd>
@@ -32,7 +32,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.hide)
+            @Html.DisplayName("Hiển thị")
         </dt>
 
         <dd>
@@ -40,7 +40,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.order)
+            @Html.DisplayName("Sắp xếp")
         </dt>
 
         <dd>
@@ -48,7 +48,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.datebegin)
+            @Html.DisplayName("Ngày tạo")
         </dt>
 
         <dd>
@@ -56,7 +56,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Menu.name)
+            @Html.DisplayName("Menu cha")
         </dt>
 
         <dd>
