--- a/Views/Contact/getContact.cshtml
+++ b/Views/Contact/getContact.cshtml
@@ -8,7 +8,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="titlepage">
-                    <h2>Contact Us</h2>
+                    <h2>Liên hệ</h2>
+                    <h3>Gửi vấn đề của bạn, chúng tôi sẽ liên hệ sớm nhất có thể!</h3>
                 </div>
             </div>
         </div>
@@ -17,19 +18,19 @@
                 <form id="request" class="main_form">
                     <div class="row">
                         <div class="col-md-12 ">
-                            <input class="contactus" placeholder="Name" type="type" name="Name">
+                            <input class="contactus" placeholder="Họ và Tên" type="type" name="Name">
                         </div>
                         <div class="col-md-12">
                             <input class="contactus" placeholder="Email" type="type" name="Email">
                         </div>
                         <div class="col-md-12">
-                            <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number">
+                            <input class="contactus" placeholder="Số điện thoại" type="type" name="Phone Number">
                         </div>
                         <div class="col-md-12">
-                            <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message</textarea>
+                            <textarea class="textarea" placeholder="Vấn đề của bạn" type="type" Message="Name"></textarea>
                         </div>
                         <div class="col-md-12">
-                            <button class="send_btn">Send</button>
+                            <button class="send_btn">Gửi</button>
                         </div>
                     </div>
                 </form>
@@ -37,7 +38,7 @@
             <div class="col-md-6">
                 <div class="map_main">
                     <div class="map-responsive">
-                        @*<iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="400" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>*@
+                        <div id="map-container"></div>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3920.033088307372!2d106.69676687485627!3d10.731931389414134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528b2747a81a3%3A0x33c1813055acb613!2sTon%20Duc%20Thang%20University!5e0!3m2!1sen!2s!4v1729353960440!5m2!1sen!2s" width="600" height="400" frameborder="0" style="border:0; width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
