--- a/Areas/Admin/Views/SubMenus/Create.cshtml
+++ b/Areas/Admin/Views/SubMenus/Create.cshtml
@@ -56,7 +56,7 @@
         <div class="form-group">
             @Html.Label("Menu cha", htmlAttributes: new { @class = "control-label " })
             <div class="col-md-10">
-                @Html.DropDownList("Menu cha", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("menuId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.menuId, "", new { @class = "text-danger" })
             </div>
         </div>
