--- a/Areas/Admin/Views/SubMenus/Edit.cshtml
+++ b/Areas/Admin/Views/SubMenus/Edit.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Chỉnh sửa</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "SubMenus", FormMethod.Post, new { enctype = "multipart/form-data", @id = "form-edit" }))
 {
     @Html.AntiForgeryToken()
     
@@ -51,14 +51,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.order, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.order, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Menu cha", htmlAttributes: new { @class = "control-label " })
-            <div class="col-md-10">
-                @Html.DropDownList("Menu cha", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.menuId, "", new { @class = "text-danger" })
             </div>
         </div>
 
