--- a/Views/HomePage/getBanner.cshtml
+++ b/Views/HomePage/getBanner.cshtml
@@ -1,38 +1,36 @@
 ﻿@model IEnumerable<HoiTroWebsite.Models.Banner>
 
-@*@Styles.Render("~/Content/css")
-@Scripts.Render("~/Scripts/js")*@
 <section class="banner_main">
-    <div id="myCarousel" class="carousel slide banner" data-ride="carousel">
-        @{int j = 0; }
+    <div id="myCarousel" class="carousel slide banner" data-bs-ride="carousel">
+        @{ int j = 0; }
         <ol class="carousel-indicators">
             @foreach (var i in Model)
             {
-                <li data-target="#myCarousel" data-slide-to=@j class="@(j == 0 ? "active" : "")"></li>
-                j = j + 1;
+                <li data-bs-target="#myCarousel" data-bs-slide-to="@j" class="@(j == 0 ? "active" : "")"></li>
+                j++;
             }
-
         </ol>
-        @{ j = 0;}
+        @{ j = 0; }
         <div class="carousel-inner">
             @foreach (var i in Model)
             {
                 <div class="carousel-item @(j == 0 ? "active" : "")">
-                    <img class="first-slide" src="~/Content/images/@i.img" alt="First slide" height="" width="">
+                    <img class="d-block w-100" src="~/Content/images/@i.img" alt="Slide @j">
                 </div>
-                j = j + 1;
+                j++;
             }
         </div>
 
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
+            <span class="visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+            <span class="visually-hidden">Next</span>
         </a>
     </div>
+
     <div class="booking_ocline">
         <div class="container">
             <div class="row">
@@ -41,18 +39,22 @@
                         <h1>Book a Room Online</h1>
                         <form class="book_now">
                             <div class="row">
-                                <div class="col-md-12">
-                                    <span>Arrival</span>
-                                    <img class="date_cua" src="~/Content/images/date.png">
-                                    <input class="online_book" placeholder="dd/mm/yyyy" type="date" name="dd/mm/yyyy">
+                                <div class="col-md-12 mb-3">
+                                    <label for="arrival" class="form-label">Arrival</label>
+                                    <div class="input-group">
+                                        <img class="date_cua me-2" src="~/Content/images/date.png" alt="Date Icon">
+                                        <input id="arrival" class="form-control" type="date" name="arrival" placeholder="dd/mm/yyyy">
+                                    </div>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="departure" class="form-label">Departure</label>
+                                    <div class="input-group">
+                                        <img class="date_cua me-2" src="~/Content/images/date.png" alt="Date Icon">
+                                        <input id="departure" class="form-control" type="date" name="departure" placeholder="dd/mm/yyyy">
+                                    </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <span>Departure</span>
-                                    <img class="date_cua" src="~/Content/images/date.png">
-                                    <input class="online_book" placeholder="dd/mm/yyyy" type="date" name="dd/mm/yyyy">
-                                </div>
-                                <div class="col-md-12">
-                                    <button class="book_btn">Book Now</button>
+                                    <button type="submit" class="btn btn-primary w-100">Book Now</button>
                                 </div>
                             </div>
                         </form>
